# deadline-cloud-for-blender

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  README.md  depsBundle.py  depsBundle.sh  hatch.toml  hatch_custom_hook.py  hatch_version_hook.py  pyproject.toml  requirements-development.txt  requirements-release.txt  requirements-testing.txt  setup_integ_env.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  feature_request.yml  maintenance.yml
.github/actions/bump_precommit_hook/: action.yml
.github/actions/prepush_release_hook/: action.yml
.github/workflows/: code_quality.yml  e2e_test.yml  integ_test.yml  publish_release.yml  release.yml  release_publish.yml  reuse_python_build.yml
devfiles/adaptor_test/: README
devfiles/adaptor_test/in/: Monkay.blend  initData.json  runData.json
devfiles/adaptor_test_template/: asset_references.json  parameter_values.json  template.yaml
devfiles/adaptor_test_template/Files/: Monkay.blend  Monkay.deadline_render_settings.json
devfiles/adaptorprototype/: example_commands.txt  initData.json  runData.json  simpletest.blend  simpletest.blend1
devfiles/submission_test_files/blender-3.3-splash/: LICENSE.txt  README.txt  blender-3.3-splash-modified.blend  blender-3.3-splash-modified.deadline_render_settings.json  blender-3.3-splash.blend  blender-3.3-splash.deadline_render_settings.json
devfiles/submission_test_files/suzanne_animated/: suzanne_animated.blend  suzanne_animated.blend1  suzanne_animated.deadline_render_settings.json
devfiles/submission_test_files/suzanne_basic_textured/: suzanne_basic_textured.blend  suzanne_basic_textured.blend1  suzanne_basic_textured.deadline_render_settings.json
devfiles/submission_test_files/suzanne_cameras_and_viewlayers/: suzanne_cameras_and_viewlayers.blend  suzanne_cameras_and_viewlayers.blend1  suzanne_cameras_and_viewlayers.deadline_render_settings.json
docs/: job_bundle_tests.md  software_arch.md  telemetry.md
install_builder/: deadline-cloud-for-blender.xml
job_bundle_output_tests/cube/expected_job_bundle/: asset_references.yaml  parameter_values.yaml  template.yaml
job_bundle_output_tests/cube/scene/: cube.blend
job_bundle_output_tests/ring_animation/expected_job_bundle/: asset_references.yaml  parameter_values.yaml  template.yaml
job_bundle_output_tests/ring_animation/scene/: ring_animation.blend
job_bundle_output_tests/scenes_layers_cameras/expected_job_bundle/: asset_references.yaml  parameter_values.yaml  template.yaml
job_bundle_output_tests/scenes_layers_cameras/scene/: scenes_layers_cameras.blend
scripts/: add_copyright_headers.sh  build_wheels.sh  create_adaptor_packaging_artifact.sh
src/deadline/blender_adaptor/BlenderAdaptor/: __main__.py  adaptor.py
src/deadline/blender_adaptor/BlenderAdaptor/schemas/: init_data.schema.json  run_data.schema.json
src/deadline/blender_adaptor/BlenderClient/: __init__.py  blender_client.py
src/deadline/blender_adaptor/BlenderClient/render_handlers/: __init__.py  cycles_blender_handler.py  default_blender_handler.py  workbench_blender_handler.py
src/deadline/blender_submitter/addons/deadline_cloud_blender_submitter/: __init__.py  adaptor_override_environment.yaml  addonpreferences.py  blender_utils.py  default_blender_template.yaml  job_bundle_output_test_runner.py  job_settings.py  logutil.py  open_deadline_cloud_dialog.py  sanity_checks.py  scene_settings_widget.py  template_filling.py
src/deadline_adaptor_for_blender/BlenderAdaptor/: BlenderAdaptor.json  __init__.py  __main__.py  adaptor.py  py.typed
src/deadline_adaptor_for_blender/BlenderAdaptor/schemas/: init_data.schema.json  run_data.schema.json
src/deadline_adaptor_for_blender/BlenderClient/: __init__.py  blender_client.py
src/deadline_adaptor_for_blender/BlenderClient/render_handlers/: __init__.py  blender_handler_base.py  cycles_handler.py  get_render_handler.py  render_handler_interface.py
src/deadline_submitter_for_blender/: __init__.py
src/deadline_submitter_for_blender/data_classes/: submitter_properties.py
src/deadline_submitter_for_blender/ui/: deadline_submitter.py
src/deadline_submitter_for_blender/ui/components/: asset_settings.py  common.py  deadline_settings.py  import_export.py  scene_settings.py
src/deadline_submitter_for_blender/utilities/: submission_functions.py  submitter_operations.py  utility_functions.py
test/: test_copyright_headers.py  test_submitter.py
test/deadline_adaptor_for_blender/unit/: __init__.py
test/deadline_adaptor_for_blender/unit/BlenderAdaptor/: test_adaptor.py
test/deadline_adaptor_for_blender/unit/BlenderClient/: test_client.py
test/deadline_adaptor_for_blender/unit/BlenderClient/render_handlers/: test_blender_handler_base.py  test_cycles_handler.py  test_get_render_handler.py
test/deadline_submitter_for_blender/integ/: __init__.py
test/deadline_submitter_for_blender/integ/scenes/: blender_test.blend
test/deadline_submitter_for_blender/integ/tests/: test_blender_submitter.py
test/deadline_submitter_for_blender/unit/: __init__.py
test/deadline_submitter_for_blender/unit/data_classes/: test_submitter_properties.py
test/deadline_submitter_for_blender/unit/utilities/: test_submission_functions.py  test_submitter_operations.py  test_utility_functions.py
test/unit/deadline_adaptor_for_blender/: test_adaptor.py
test/unit/deadline_submitter_for_blender/: __init__.py  test_submitter.py
