[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "deadline-cloud-for-blender"
dynamic = ["version"]
description = ''
readme = "README.md"
license = ""
requires-python = ">=3.7"

dependencies = [
    "deadline == 0.16.*",
    "openjobio == 0.8.*",
]

[project.scripts]
BlenderAdaptor = "deadline_adaptor_for_blender.BlenderAdaptor:main"

[tool.hatch.build]
artifacts = [
  "*_version.py",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "post-release"

[tool.hatch.build.hooks.vcs]
version-file = "_version.py"

[tool.hatch.build.hooks.custom]
path = "hatch_version_hook.py"

[[tool.hatch.build.hooks.custom.copy_map]]
sources = [
  "_version.py",
]
destinations = [
  "src/deadline_adaptor_for_blender",
  "src/deadline_submitter_for_blender",
]

[tool.hatch.build.targets.sdist]
include = [
    "src/*",
    "hatch_version_hook.py",
]

[tool.hatch.build.targets.wheel]
packages = [
  "src/deadline_adaptor_for_blender",
  "src/deadline_submitter_for_blender",
]

[tool.mypy]
python_version = 3.9
check_untyped_defs = true
show_error_codes = true
pretty = true
files = [ "src/**/*.py" ]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["bpy", "bpy.*", "bpy_extras.*", "deadline_client.*"]

[tool.ruff]
ignore = [
  "E501",
]
line-length = 100

[tool.ruff.isort]
known-first-party = [
  "deadline_adaptor_for_blender",
  "deadline_submitter_for_blender",
]

[tool.black]
line-length = 100
target-version = [ "py39", "py310" ]

[tool.pytest.ini_options]
xfail_strict = true
addopts = [
    "--durations=5",
    "--cov=src/deadline_adaptor_for_blender",
    "--cov=src/deadline_submitter_for_blender",
    "--color=yes",
    "--cov-report=html:build/coverage",
    "--cov-report=xml:build/coverage/coverage.xml",
    "--cov-report=term-missing",
    "--numprocesses=auto",
]
testpaths = [ "test" ]
looponfailroots = [
    "src",
    "test",
]
# looponfailroots is deprecated, this removes the deprecation from the test output
filterwarnings = [
    "ignore::DeprecationWarning"
]

[tool.coverage.run]
branch = true
parallel = false
source_pkgs = [ "deadline_adaptor_for_blender", "deadline_submitter_for_blender" ]
omit = [ "**/__main__.py", "**/_version.py", "*/deadline_submitter_for_blender/ui/*" ]

[tool.coverage.paths]
source =  [
    "src/"
]

[tool.coverage.report]
show_missing = true
fail_under = 90

[tool.semantic_release]
# Can be removed or set to true once we are v1
major_on_zero = false
tag_format = "v{version}"

[tool.semantic_release.publish]
upload_to_vcs_release = false

[tool.semantic_release.changelog]
template_dir = ".semantic_release"

[tool.semantic_release.changelog.environment]
trim_blocks = true
lstrip_blocks = true

[tool.semantic_release.branches.release]
match = "(mainline|release)"
