[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "deadline-cloud-for-blender"
dynamic = ["version"]
readme = "README.md"
license = ""
requires-python = ">=3.10"
# Blender 3.1+ uses Python version 3.10+ (https://vfxplatform.com/ 2023)

dependencies = [
    "deadline == 0.44.*", 
    "openjd-adaptor-runtime == 0.6.*",
]

[project.scripts]
blender-openjd = "deadline.blender_adaptor.BlenderAdaptor:main"
# The binary name 'BlenderAdaptor' is deprecated.
BlenderAdaptor = "deadline.blender_adaptor.BlenderAdaptor:main"

# --- HATCH ---

[tool.hatch.build]
artifacts = ["*_version.py"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "post-release"

[tool.hatch.build.hooks.vcs]
version-file = "_version.py"

[tool.hatch.build.hooks.custom]
path = "hatch_custom_hook.py"
blender_addon_init = "src/deadline/blender_submitter/addons/deadline_cloud_blender_submitter/__init__.py"

[tool.hatch.build.hooks.custom.copy_version_py]
destinations = [
  "src/deadline/blender_adaptor",
  "src/deadline/blender_submitter",
  "src/deadline/blender_submitter/addons/deadline_cloud_blender_submitter",
]

[tool.hatch.build.targets.sdist]
include = ["src/*", "hatch_custom_hook.py"]

[tool.hatch.build.targets.wheel]
packages = ["src/deadline"]

# --- MYPY ---

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
show_error_codes = true
pretty = true
files = ["src/**/*.py"]
ignore_missing_imports = true
# Tell mypy that there's a namespace package at src/deadline
namespace_packages = true
explicit_package_bases = true
mypy_path = "src"

# [[tool.mypy.overrides]]
# module = ["bpy.*","PySide2.*"]

# --- RUFF / BLACK ---

[tool.ruff]
ignore = ["E501"]
line-length = 100

[tool.ruff.isort]
known-first-party = ["deadline_worker_agent"]

[tool.black]
line-length = 100

# --- PYTEST ---

[tool.pytest.ini_options]
xfail_strict = true
addopts = [
  "--durations=5",
  "--cov=src/deadline/blender_adaptor",
  "--cov=src/deadline/blender_submitter",
  "--color=yes",
  "--cov-report=html:build/coverage",
  "--cov-report=xml:build/coverage/coverage.xml",
  "--cov-report=term-missing",
  "--numprocesses=auto",
]
testpaths = ["test"]
looponfailroots = ["src", "test"]
# looponfailroots is deprecated, this removes the deprecation from the test output
filterwarnings = ["ignore::DeprecationWarning"]

# --- COVERAGE ---

[tool.coverage.run]
source_pkgs = [
  "deadline/blender_adaptor",
  "deadline/blender_submitter",
]
branch = true
parallel = true
omit = [
  "**/__main__.py",
  "**/_version.py",
]


[tool.coverage.paths]
source = ["src/"]

[tool.coverage.report]
show_missing = true
fail_under = 24

[tool.semantic_release]
# Can be removed or set to true once we are v1
major_on_zero = false
tag_format = "{version}"

[tool.semantic_release.commit_parser_options]
allowed_tags = [
    "build",
    "chore",
    "ci",
    "docs",
    "feat",
    "fix",
    "perf",
    "style",
    "refactor",
    "test",
]
minor_tags = []
patch_tags = [
  "chore",
  "feat",
  "fix",
  "refactor",
]

[tool.semantic_release.publish]
upload_to_vcs_release = false

[tool.semantic_release.changelog]
template_dir = ".semantic_release"

[tool.semantic_release.changelog.environment]
trim_blocks = true
lstrip_blocks = true

[tool.semantic_release.branches.release]
match = "(mainline|release)"
